# tinyvis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: pre-commit-fix.yml
src/tinyvis/: __init__.py  cameras.py  common.py  meshes.py  pointclouds.py  renderer.py  visualize.py
