[project]
name = "tinyvis"
version = "0.1.0"
description = "A small collection of visualization tools."
keywords = ["tools", "visualization", "plotly", "trimesh"]
readme = "README.md"
authors = [{ name = "alex-bene", email = "alexandrosbene@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "plotly>=6.5.0",
    "trimesh>=4.9.0",
    "matplotlib>=3.10.7",
    "tinytools",
    "pyrender>=0.1.45",
]

[tool.uv]
override-dependencies = ["PyOpenGL>=3.1.9"] # force upgrade for pyrender

[tool.uv.sources]
tinytools = { git = "https://github.com/alex-bene/tinytools.git" }

[dependency-groups]
dev = ["notebook>=7.3.2", "ruff>=0.13.3", "pre-commit>=3.7.1"]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/alex-bene/tinyvis"
Repository = "https://github.com/alex-bene/tinyvis"

[tool.pyright]
exclude = ["**/__pycache__", "**/.*"]
typeCheckingMode = "off"
